# SoloProjectGroups-hll

./: .gitattributes  .gitignore  .gitignore.save  README.md
.gitignore/: .gitignor
p1/: README.md  docker-compose.yml  start.sh
p10/: README.md  start.sh
p100/: .gitignore  README.md  config.yaml  docker-compose.yml  go.mod  start.sh
p101/: index.html  main.js  package.json  renderer.js  server.js  start.sh  test_message.txt  transactions.db
p102/: .env.example  OPTIMIZATION.md  README.md  requirements.txt
p103/: README.md  start.sh
p104/: app.js  index.html  style.css
p105/: .gitignore  README.md
p106/: README.md  main.js  package.json  preload.js
p107/: README.md  package.json  requirements.txt
p108/: README.md
p109/: README.md
p11/: README.md  requirements.txt
p110/: requirements.txt  run.py  sample.icd  sample2.icd
p111/: index.html  package-lock.json  package.json  tailwind.config.js
p112/: README.md  test_bram_overflow.c
p113/: OPTIMIZATION.md  README.md  generate_sample_data.py  requirements.txt  start.sh
p114/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
p115/: package-lock.json  package.json  tailwind.config.js
p116/: README.md  debug-tle-orbit-smoothing-bug.md  requirements.txt  run.py  start.sh
p117/: main.js  package.json  preload.js
p118/: .gitignore  main.js  package-lock.json  package.json  preload.js
p119/: package-lock.json  package.json  test_backend.py
p12/: README.md  start.sh
p120/: Makefile  README.md  config.yaml  go.mod  go.sum
p121/: README.md
p122/: .gitignore
p123/: README.md  download-novnc.sh  go.mod
p124/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
p125/: .gitignore  README.md  package.json  test-setup.js  validate-ffmpeg.js
p127/: app.py  code_generator.py
p128/: package.json
p129/: package-lock.json  package.json  vite.config.ts
p13/: README.md  binding.gyp  package.json
p130/: go.mod  main.go
p131/: .env  index.html  nodemon.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
p132/: package-lock.json  package.json
p133/: Makefile  README.md  app.py  pci-helper  pci-helper.c  run.sh
p134/: electron.vite.config.ts  package-lock.json  package.json
p135/: README.md  docker-compose.yml  start-docker.sh  start.sh
p136/: package-lock.json  package.json  tailwind.config.js
p137/: package-lock.json  package.json
p138/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
p139/: package-lock.json  package.json
p14/: README.md  requirements.txt  start_backend.sh  start_frontend.sh
p140/: README.md
p141/: package.json
p142/: index.html  package-lock.json  package.json  tailwind.config.js
p143/: .env.example  README.md  docker-compose.yml  generate_test_data.py
p144/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
p145/: package-lock.json  package.json  server.js
p146/: go.mod  main.go  stress_test.py  test_client.py
p148/: README.md
p149/: README.md  app.py  requirements.txt
p15/: Dockerfile  Makefile  go.mod
p150/: README.md  index.html  main.js  malicious_hashes.json  package.json  preload.js  renderer.js  styles.css
p151/: index.html
p152/: README.md  package-lock.json  package.json  server.js  zookeeperClient.js
p153/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
p154/: go.mod  main.go
p213/: README.md  pyproject.toml  requirements.txt  setup.py
p213/nfs4_client/: __init__.py  __main__.py  api.py  auth.py  cli.py  nfs_client.py  stats.py
p213/tests/: __init__.py  test_nfs_client.py  test_stats.py
p216/: CMakeLists.txt  index.html  test_g729
p216/js/: g729_sim.js
p216/src/: common.h  emscripten_bindings.cpp  g729_decoder.cpp  g729_encoder.cpp  mos_estimator.cpp  packet_loss_simulator.cpp  test_main.cpp
p27/: Cargo.toml  README.md
p27/src/: cli.rs  crypto.rs  index.rs  main.rs  s3_storage.rs  server.rs  storage.rs  tail.rs
p27/static/: index.html
p271/: CMakeLists.txt
p271/frontend/: app.js  index.html  style.css
p271/src/: bmca.cpp  bmca.h  http_server.cpp  http_server.h  main.cpp  ptp_clock.cpp  ptp_clock.h  ptp_types.h  state_machine.cpp  state_machine.h
p285/cpp-parser/: CMakeLists.txt
p285/cpp-parser/src/: FrameParser.cpp  FrameParser.h  JsonBuilder.cpp  JsonBuilder.h  MacHeaderParser.cpp  MacHeaderParser.h  SignalingParser.cpp  SignalingParser.h  SofParser.cpp  SofParser.h  main.cpp
p35/: Cargo.toml  README.md
p35/src/: cli.rs  leap_second.rs  lib.rs  main.rs  monitor.rs  protocol.rs  ptp.rs  ptp_server.rs  reporting.rs  server.rs  stats.rs  time_source.rs  timestamping.rs
p42/: CMakeLists.txt  README.md  build.sh  output.nc  setup.py
p42/examples/: example_simulation.py
p42/src/cpp/: netcdf_io.cpp  netcdf_io.h  shallow_water_mpi.cpp  shallow_water_mpi.h  shallow_water_solver.cpp  shallow_water_solver.h
p42/src/python/: __init__.py  benchmark.py  cli.py  netcdf_io.py  pure_python_solver.py  solver.py  visualization.py
p42/src/swig/: shallow_water.i
p48/backend/cpp/: CMakeLists.txt
p48/backend/cpp/include/: ground_segmentation.h  pile_segmentation.h  point_cloud_processor.h  volume_calculator.h
p48/backend/cpp/src/: ground_segmentation.cpp  main.cpp  pile_segmentation.cpp  point_cloud_processor.cpp  volume_calculator.cpp
p52/: Cargo.toml  README.md  test.fasta  test_rna.fasta
p52/src/: fasta.rs  fm_index.rs  lib.rs  main.rs  query.rs  server.rs
p52/static/: index.html
p82/: ADVANCED_FEATURES.md  CMakeLists.txt  INSTALL.md  PERFORMANCE_OPTIMIZATION.md  README.md  build.sh
p82/include/: common.h  crypto_logger.h  fuse_operations.h  gm_crypto.h  kms_manager.h  metadata.h  parallel_crypto.h  performance_test.h  virtual_fs.h
p82/src/: crypto_logger.cpp  fuse_operations.cpp  gm_crypto.cpp  kms_manager.cpp  main.cpp  metadata.cpp  parallel_crypto.cpp  performance_test.cpp  virtual_fs.cpp
p82/tests/: test_gm_crypto.cpp  test_performance.cpp
(+5784 files in other folders)
