[package]
name = "logtail-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logtail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
notify = "6.1"
futures-util = "0.3"
regex = "1.10"
lazy_static = "1.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
http = "1.0"
jieba-rs = { version = "0.7", features = ["default-dict"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
rusoto_s3 = "0.48"
rusoto_core = "0.48"
rusoto_credential = "0.48"
bytes = "1.5"
hex = "0.4"
