[package]
name = "ntp-server"
version = "0.1.0"
edition = "2021"
description = "NTPv4 server with hardware timestamping support"
license = "MIT"

[[bin]]
name = "ntpd"
path = "src/main.rs"

[[bin]]
name = "ntp-cli"
path = "src/cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock", "format"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.27", features = ["socket", "time"] }
libc = "0.2"
byteorder = "1.0"
rand = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
criterion = "0.5"
