[package]
name = "fm_index_gene"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"
memmap2 = "0.9"
crossbeam = "0.8"
num_cpus = "1.0"
tower-http = { version = "0.4", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
